--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,1 +1,22 @@
-// Начните писать стили здесь
+@import "global.scss";
+@import "normalize.scss";
+@import "fonts.scss";
+@import "variables.scss";
+@import "mixin.scss";
+@import "blocks/visually-hidden.scss";
+@import "blocks/container.scss";
+@import "blocks/page-header.scss";
+@import "blocks/main-nav.scss";
+@import "blocks/site-list.scss";
+@import "blocks/page-main.scss";
+@import "blocks/advice.scss";
+@import "blocks/visually-hidden.scss";
+@import "blocks/features.scss";
+@import "blocks/feature-photo.scss";
+@import "blocks/offer.scss";
+@import "blocks/map.scss";
+@import "blocks/page-footer.scss";
+@import "blocks/social.scss";
+@import "blocks/button.scss";
+@import "blocks/copyright.scss";
+
