--- a/source/sass/blocks/advice.scss
+++ b/source/sass/blocks/advice.scss
@@ -5,3 +5,8 @@
   text-transform: uppercase;
   padding-bottom: 6px;
 }
+
+.advice--form {
+  border-bottom: 1px solid #e5e5e5;
+  padding-bottom: 9px;
+}
