--- a/source/sass/blocks/feature-photo.scss
+++ b/source/sass/blocks/feature-photo.scss
@@ -55,7 +55,8 @@
   display: block;
 }
 
-.feature-photo--first {
+.feature-photo--first,
+.feature-photo--second {
   min-height: 211px;
   padding-top: 57px;
 }
