--- a/source/sass/blocks/features.scss
+++ b/source/sass/blocks/features.scss
@@ -3,6 +3,13 @@
   text-transform: uppercase;
 }
 
+.features__welcome {
+  line-height: 26px;
+  text-align: center;
+  text-transform: uppercase;
+  padding-bottom: 6px;
+}
+
 .features__list,
 .features__list-grey {
   @include list-reset;
@@ -21,7 +28,7 @@
   position: relative;
   padding: 19px 0 0 70px;
   margin: 0 0 22px 0;
-  width: 290px;
+  width: 250px;
   height: auto;
 }
 
