--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,7 +1,7 @@
-@import "global.scss";
-@import "fonts.scss";
-@import "variables.scss";
-@import "mixin.scss";
+@import "general/global.scss";
+@import "general/fonts.scss";
+@import "general/variables.scss";
+@import "general/mixin.scss";
 @import "blocks/visually-hidden.scss";
 @import "blocks/container.scss";
 @import "blocks/page-header.scss";
@@ -17,3 +17,8 @@
 @import "blocks/social.scss";
 @import "blocks/button.scss";
 @import "blocks/copyright.scss";
+@import "blocks/form-chbx.scss";
+@import "blocks/form-contact.scss";
+@import "blocks/form-name.scss";
+@import "blocks/form-radio.scss";
+@import "blocks/feedback-form.scss";
