--- a/source/sass/general/fonts.scss
+++ b/source/sass/general/fonts.scss
@@ -3,7 +3,7 @@
   font-style: normal;
   font-weight: normal;
   font-display: swap;
-  src: local("PT Sans"),
+  src:
     url("../fonts/ptsans.woff2") format("woff2"),
     url("../fonts/ptsans.woff") format("woff");
 }
@@ -13,6 +13,7 @@
   font-style: normal;
   font-weight: bold;
   font-display: swap;
-  src: url("../fonts/ptsansbold.woff2") format("woff2"),
+  src:
+    url("../fonts/ptsansbold.woff2") format("woff2"),
     url("../fonts/ptsansbold.woff") format("woff");
 }
