--- a/source/sass/blocks/advice.scss
+++ b/source/sass/blocks/advice.scss
@@ -10,3 +10,94 @@
   border-bottom: 1px solid #e5e5e5;
   padding-bottom: 9px;
 }
+
+.advice__image {
+  position: relative;
+  width: 320px;
+  min-height: 160px;
+  margin-bottom: 35px;
+  background-image: url("../img/back-mobile.jpg");
+  background-repeat: no-repeat;
+  background-position: bottom;
+  z-index: 1;
+
+  img {
+    display: block;
+    width: 229px;
+    margin: 0 auto;
+    padding-top: 50px;
+  }
+}
+
+@media (min-width: $tablet-width) {
+  .advise__image img {
+    width: 458px;
+    padding-top: 94px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .advice__image img {
+    padding-top: 101px;
+  }
+}
+
+.advice__image--index {
+  min-height: 389px;
+  margin-bottom: 40px;
+  background-size: cover;
+
+  img {
+    width: 280px;
+    padding-top: 90px;
+  }
+}
+
+@media (min-width: $tablet-width) {
+  .advice__image--index img {
+    width: 460px;
+    padding-top: 78px;
+  }
+}
+
+@media (min-width: $tablet-width) {
+  .advice__image {
+    width: 100%;
+    background-image: url("../img/back-tablet.jpg");
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .advice__image {
+    width: 100%;
+    background-image: url("../img/back-desktop.jpg");
+  }
+}
+
+.advice__triangle {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 50px;
+  background-image: url("../img/triangle-mobile.svg");
+  background-position: bottom;
+  background-repeat: no-repeat;
+  background-size: 105% auto;
+}
+
+@media (min-width: $tablet-width) {
+  .advice__triangle {
+    background-image: url("../img/triangle-tablet.svg");
+    min-height: 60px;
+    background-size: 100%;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .banner__triangle {
+    background-image: url("../img/triangle-desktop.svg");
+    background-size: cover;
+    min-height: 57px;
+  }
+}
