--- a/source/sass/blocks/page-footer.scss
+++ b/source/sass/blocks/page-footer.scss
@@ -7,9 +7,32 @@
   height: 244px;
 }
 
+@media (min-width: $tablet-width) {
+  .page-footer {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    height: 120px;
+  }
+}
+
 .page-footer__hash-wrapper {
   margin: 0 0 37px 0;
   padding: 35px 0 0 0;
+}
+
+@media (min-width: $tablet-width) {
+  .page-footer__hash-wrapper {
+    margin: 0 0 0 60px;
+    padding: 0;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .page-footer__hash-wrapper {
+    margin: 0 0 0 132px;
+    padding: 0;
+  }
 }
 
 .page-footer__hash {
