--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -1,8 +1,29 @@
 .page-header {
+  background-color: $white;
   text-align: center;
+}
+
+.page-header__logo {
+  position: absolute;
+  top: 0;
+  left: 50%;
+  z-index: 5;
 }
 
 .page-header__logo-image {
   width: 102px;
   height: 83px;
+}
+
+@media (min-width: $desktop-width) {
+  .page-header__logo-image {
+    width: 187px;
+    height: 96px;
+  }
+}
+
+@media (max-width: 767px) {
+  .page-header__logo--mobile {
+    top: 224px;
+  }
 }
