--- a/source/sass/general/variables.scss
+++ b/source/sass/general/variables.scss
@@ -1,5 +1,6 @@
 $page-font: "PT Sans", tahoma, sans-serif;
 $main-blue: #81b3d2;
 $white: #ffffff;
+$mobile-width-only: 767px;
 $tablet-width: 768px;
 $desktop-width: 1200px;
