--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -22,5 +22,6 @@
 @import "blocks/form-name.scss";
 @import "blocks/form-radio.scss";
 @import "blocks/feedback-form.scss";
+@import "blocks/catalogs.scss";
 @import "blocks/catalog.scss";
 @import "blocks/video.scss";
