--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -5,6 +5,74 @@
   min-height: 415px;
   margin: 0 auto;
   padding-top: 22px;
+
+  &::after {
+    position: absolute;
+    content: "";
+    width: 320px;
+    height: 1px;
+    background-color: #d6d6d6;
+    top: 414px;
+    left: -20px;
+  }
+}
+
+@media (min-width: $tablet-width) {
+  .catalog {
+    background-color: #f2f2f2;
+    width: 324px;
+    min-height: 347px;
+    margin: 0;
+    padding: 0;
+
+    &::after {
+      display: none;
+    }
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .catalog {
+    width: 400px;
+    min-height: 267px;
+  }
+}
+
+@media (min-width: $tablet-width) {
+  .catalog--first {
+    width: 100%;
+    min-height: 480px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .catalog--first {
+    min-height: 400px;
+  }
+}
+
+.catalog__image {
+  display: block;
+}
+
+@media (min-width: $tablet-width) {
+  .catalog__image {
+    width: 324px;
+    height: 267px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .catalog__image {
+    width: 400px;
+  }
+}
+
+@media (min-width: $tablet-width) {
+  .catalog__image--first {
+    width: 100%;
+    height: 400px;
+  }
 }
 
 .catalog__outline {
@@ -17,9 +85,35 @@
   flex-direction: column;
 }
 
+@media (min-width: $tablet-width) {
+  .catalog__outline {
+    background-color: #f2f2f2;
+    padding-left: 21px;
+    flex-direction: row;
+    width: 100%;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .catalog__outline {
+    position: absolute;
+    background-color: rgba(0, 0, 0, 0.3);
+    width: 100%;
+    min-height: 80px;
+    padding-top: 15px;
+    bottom: 0;
+  }
+}
+
 .catalog__author-wrapper {
   margin: 0;
   padding: 0;
+}
+
+@media (min-width: $desktop-width) {
+  .catalog__author-wrapper {
+    color: $white;
+  }
 }
 
 .catalog__title {
@@ -36,6 +130,19 @@
   display: inline-block;
 }
 
+.catalog__author {
+  font-size: 14px;
+  line-height: 24px;
+  color: #000000;
+  margin-left: 5px;
+}
+
+@media (min-width: $desktop-width) {
+  .catalog__author {
+    color: $white;
+  }
+}
+
 .catalog__likes {
   position: relative;
   display: block;
@@ -44,8 +151,47 @@
 }
 
 .catalog__likes-svg {
+  position: absolute;
   top: 7px;
   left: 1px;
   margin-right: 14px;
   cursor: pointer;
+}
+
+@media (min-width: $tablet-width) {
+  .catalog__likes {
+    background-color: #f2f2f2;
+    margin-left: auto;
+    padding-right: 30px;
+    padding-top: 15px;
+  }
+
+  .catalog__likes-svg {
+    top: 13px;
+    left: 4px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .catalog__likes {
+    background-color: transparent;
+    color: $white;
+  }
+
+  &-svg {
+    fill: $white;
+  }
+}
+
+@media (min-width: $tablet-width) {
+  .catalog__likes--first {
+    padding-right: 21px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .catalog__likes--first {
+    padding-right: 21px;
+    margin-left: auto;
+  }
 }
