--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -3,6 +3,19 @@
   text-align: center;
 }
 
+.page-header__paragraph {
+  min-height: 55px;
+  position: relative;
+  margin: 0;
+  padding: 0;
+}
+
+@media (min-width: $tablet-width) {
+  .page-header__paragraph {
+    display: none;
+  }
+}
+
 .page-header__logo {
   position: absolute;
   top: 0;
