--- a/source/sass/blocks/advice.scss
+++ b/source/sass/blocks/advice.scss
@@ -88,7 +88,7 @@
 @media (min-width: $desktop-width) {
   .advice__image {
     width: 100%;
-    background-image: url("../img/bg-back-desktop@1x.jpg");
+    background-image: url("../img/back-desktop@1x.jpg");
   }
 
   &--form {
