--- a/source/sass/blocks/form-contact.scss
+++ b/source/sass/blocks/form-contact.scss
@@ -3,6 +3,22 @@
   width: 280px;
 }
 
+@media (min-width: $tablet-width) {
+  .form-contact {
+    width: 100%;
+    margin-bottom: 25px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .form-contact {
+    width: 480px;
+    display: flex;
+    flex-direction: row;
+    align-items: baseline;
+  }
+}
+
 .form-contact__label {
   display: block;
   font-size: 14px;
@@ -12,6 +28,19 @@
   text-transform: uppercase;
   margin-left: 22px;
   margin-bottom: 6px;
+}
+
+@media (min-width: $desktop-width) {
+  .form-contact__label {
+    margin-left: 0;
+    margin-right: 17px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .form-contact__hiding-phone {
+    display: none;
+  }
 }
 
 .form-contact__input {
@@ -26,6 +55,19 @@
   color: #000000;
   padding-left: 20px;
   flex-grow: 1;
+
+  &:hover {
+    outline: none;
+    background-color: #e5e5e5;
+  }
+
+  &:active,
+  &:focus {
+    outline: none;
+    background-color: $white;
+    border: 3px solid #e5e5e5;
+    padding-left: 17px;
+  }
 }
 
 .form-contact__input-container {
@@ -37,13 +79,32 @@
   justify-content: space-between;
 }
 
+@media (min-width: $tablet-width) {
+  .form-contact__input-container {
+    width: 100%;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .form-contact__input-container {
+    width: 315px;
+  }
+}
+
 .form-contact__logo {
   display: inline-block;
   width: 58px;
   height: 58px;
-  padding-right: 20px;
-  padding-left: 20px;
+  padding-right: 50px;
   background-color: #e6e6e6;
   background-position: center;
   background-repeat: no-repeat;
+}
+
+.form-contact__logo--phone {
+  background-image: url("../img/icon-phone.svg");
+}
+
+.form-contact__logo--env {
+  background-image: url("../img/icon-mail.svg");
 }
