--- a/source/sass/blocks/form-name.scss
+++ b/source/sass/blocks/form-name.scss
@@ -9,6 +9,20 @@
   margin-top: 20px;
 }
 
+@media (min-width: $tablet-width) {
+  .form-name {
+    width: 323px;
+    padding-left: 57px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .form-name {
+    width: 480px;
+    padding-left: 80px;
+  }
+}
+
 .form-name__label {
   margin: 0;
   padding: 0;
@@ -19,9 +33,11 @@
   color: #333333;
   text-align: left;
   text-transform: uppercase;
+  flex-grow: 0;
 }
 
 .form-name__input {
+  flex-grow: 1;
   border: none;
   background-color: #f2f2f2;
   min-height: 58px;
@@ -32,5 +48,23 @@
   color: #000000;
   padding-left: 20px;
   min-width: 150px;
-  flex-grow: 1;
+
+  &:hover {
+    outline: none;
+    background-color: #e5e5e5;
+  }
+
+  &:active,
+  &:focus {
+    outline: none;
+    background-color: $white;
+    border: 3px solid #e5e5e5;
+    padding-left: 17px;
+  }
+}
+
+@media (min-width: $tablet-width) {
+  .form-name__input {
+    min-width: 140px;
+  }
 }
