--- a/source/sass/blocks/form-radio.scss
+++ b/source/sass/blocks/form-radio.scss
@@ -6,10 +6,55 @@
   margin-bottom: 10px;
 }
 
+@media (min-width: $tablet-width) {
+  .form-radio {
+    margin-bottom: 20px;
+  }
+}
+
 .form-radio__label {
   position: relative;
   font-size: 18px;
   line-height: 26px;
   font-weight: bold;
   color: #000000;
+  padding-left: 79px;
+}
+
+@media (min-width: $tablet-width) {
+  .form-radio__label {
+    padding-left: 75px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .form-radio__label {
+    padding-left: 79px;
+  }
+}
+
+.form-radio__input:checked ~ .form-radio__label::after {
+  position: absolute;
+  content: "";
+  width: 20px;
+  height: 20px;
+  background-color: #333333;
+  top: 4px;
+  left: 19px;
+  border-radius: 50%;
+}
+
+.form-radio__input:disabled ~ .form-radio__label::after {
+  position: absolute;
+  content: "";
+  width: 20px;
+  height: 20px;
+  background-color: #a4a4a4;
+  top: 4px;
+  left: 19px;
+  border-radius: 50%;
+}
+
+.form-radio__input:checked ~ .form-radio__label:active::after {
+  background-color: #a4a4a4;
 }
