--- a/source/sass/blocks/video.scss
+++ b/source/sass/blocks/video.scss
@@ -7,9 +7,38 @@
   padding-bottom: 39px;
 }
 
+@media (min-width: $tablet-width) {
+  .video {
+    width: 648px;
+    min-height: 784px;
+    padding-bottom: 41px;
+    margin: 0 auto;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .video {
+    width: 800px;
+    margin: 0 auto;
+    padding-bottom: 85px;
+  }
+}
+
 .video__outline {
   min-height: 193px;
   padding: 0;
+}
+
+@media (min-width: $tablet-width) {
+  .video__outline {
+    height: 244px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .video__outline {
+    margin-bottom: 3px;
+  }
 }
 
 .video__title {
@@ -23,6 +52,20 @@
   padding-top: 33px;
 }
 
+@media (min-width: $tablet-width) {
+  .video__title {
+    font-size: 30px;
+    padding-top: 67px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .video__title {
+    font-size: 30px;
+    padding-top: 71px;
+  }
+}
+
 .video__description {
   width: 270px;
   margin: 0 auto;
@@ -32,6 +75,26 @@
   line-height: 24px;
   font-weight: normal;
   color: #333333;
+}
+
+@media (min-width: $tablet-width) {
+  .video__description {
+    padding-top: 31px;
+    width: 425px;
+  }
+}
+
+.video__player {
+  width: 100%;
+  min-height: 201px;
+  background-color: #92acbd;
+}
+
+@media (min-width: $tablet-width) {
+  .video__player {
+    width: 100%;
+    height: 500px;
+  }
 }
 
 .video__control {
@@ -44,12 +107,98 @@
   background-color: rgba(0, 0, 0, 0.05);
 }
 
+@media (min-width: $tablet-width) {
+  .video__control {
+    width: 648px;
+    min-height: 93px;
+    margin: -97px auto 0 auto;
+    flex-wrap: nowrap;
+    background-color: rgb(0, 0, 0);
+    align-items: center;
+    opacity: 0.6;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .video__control {
+    width: 100%;
+  }
+}
+
 .video__line {
   position: relative;
   width: 280px;
   height: 45px;
   background-color: rgba(0, 0, 0, 0.6);
   margin: 0 auto;
+}
+
+@media (min-width: $tablet-width) {
+  .video__line {
+    width: 389px;
+    height: 93px;
+    background-color: transparent;
+    order: 2;
+    margin-left: -12px;
+    margin-right: 0;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .video__line {
+    width: 540px;
+  }
+}
+
+.video__line-line {
+  width: 235px;
+  height: 3px;
+  background-color: rgba(255, 255, 255, 0.2);
+  margin: 0 auto;
+  margin-top: 23px;
+  margin-left: 22px;
+}
+
+@media (min-width: $tablet-width) {
+  .video__line-line {
+    width: 389px;
+    margin-top: 46px;
+    margin-left: 46px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .video__line-line {
+    width: 540px;
+  }
+}
+
+.video__slider {
+  position: absolute;
+  content: "";
+  width: 9px;
+  height: 9px;
+  border-radius: 50%;
+  background-color: rgba(255, 255, 255, 0.9);
+  top: 19px;
+  left: 58px;
+  cursor: pointer;
+}
+
+.video__slider:hover,
+.video__slider:focus {
+  background-color: #333333;
+}
+
+.video__slider:active {
+  background-color: #c1c1c1;
+}
+
+@media (min-width: $tablet-width) {
+  .video__slider {
+    top: 43px;
+    left: 159px;
+  }
 }
 
 .video__replay,
@@ -63,12 +212,33 @@
   margin-left: 18px;
 }
 
+@media (min-width: $tablet-width) {
+  .video__replay {
+    order: 1;
+    margin-left: 28px;
+  }
+}
+
 .video__cc {
   margin-left: 125px;
 }
 
+@media (min-width: $tablet-width) {
+  .video__cc {
+    order: 3;
+    margin-left: 88px;
+  }
+}
+
 .video__fullscreen {
   margin-left: 25px;
+}
+
+@media (min-width: $tablet-width) {
+  .video__fullscreen {
+    order: 4;
+    margin-left: 25px;
+  }
 }
 
 .video__button {
@@ -78,4 +248,10 @@
   background-repeat: no-repeat;
   cursor: pointer;
   background-color: #f2f2f2;
+}
+
+@media (min-width: $tablet-width) {
+  .video__button {
+    background-color: transparent;
+  }
 }
