--- a/source/sass/blocks/advice.scss
+++ b/source/sass/blocks/advice.scss
@@ -22,7 +22,7 @@
   width: 320px;
   min-height: 160px;
   margin-bottom: 35px;
-  background-image: url("../img/back-mobile.jpg");
+  background-image: url("../img/back-desktop-mobile.jpg");
   background-repeat: no-repeat;
   background-position: bottom;
   z-index: 1;
@@ -69,14 +69,14 @@
 @media (min-width: $tablet-width) {
   .advice__image {
     width: 100%;
-    background-image: url("../img/back-tablet.jpg");
+    background-image: url("../img/back-desktop-tablet.jpg");
   }
 }
 
 @media (min-width: $desktop-width) {
   .advice__image {
     width: 100%;
-    background-image: url("../img/back-desktop.jpg");
+    background-image: url("../img/back-desktop-desktop.jpg");
   }
 }
 
@@ -88,7 +88,7 @@
 @media (min-width: $desktop-width) {
   .advice__image {
     width: 100%;
-    background-image: url("../img/back-desktop@1x.jpg");
+    background-image: url("../img/back-desktop-desktop.jpg");
   }
 
   &--form {
