--- a/source/sass/blocks/copyright.scss
+++ b/source/sass/blocks/copyright.scss
@@ -2,7 +2,7 @@
   width: 146px;
   font-size: 14px;
   line-height: 26px;
-  font-weight: normal;
+  font-weight: 400;
   padding: 0 0 20px 8px;
   margin: 0 auto;
   text-align: left;
