--- a/source/sass/blocks/feedback-form.scss
+++ b/source/sass/blocks/feedback-form.scss
@@ -122,7 +122,7 @@
   font-size: 18px;
   line-height: 26px;
   color: #000000;
-  font-weight: bold;
+  font-weight: 700;
   text-transform: uppercase;
   display: block;
   text-align: center;
@@ -341,7 +341,7 @@
   font-family: $page-font;
   font-size: 18px;
   line-height: 26px;
-  font-weight: bold;
+  font-weight: 700;
   color: #000000;
   padding: 16px 20px 20px 20px;
   margin-bottom: 45px;
@@ -393,7 +393,7 @@
       font-family: $page-font;
       font-size: 14px;
       line-height: 26px;
-      font-weight: normal;
+      font-weight: 400;
       color: #333333;
       text-transform: uppercase;
     }
