--- a/source/sass/blocks/map.scss
+++ b/source/sass/blocks/map.scss
@@ -6,4 +6,5 @@
   background-image: url("/source/img/map-mobile.jpg");
   background-position: center;
   background-repeat: no-repeat;
+  margin-bottom: 38px;
 }
