--- a/source/sass/blocks/site-list.scss
+++ b/source/sass/blocks/site-list.scss
@@ -27,11 +27,10 @@
 
   a {
     display: block;
-    vertical-align: middle;
     font-family: $page-font;
     font-size: 18px;
     line-height: 40px;
-    font-weight: bold;
+    font-weight: 700;
     color: $white;
     text-transform: uppercase;
     padding: 7px 0;
