--- a/source/sass/blocks/social.scss
+++ b/source/sass/blocks/social.scss
@@ -1,6 +1,6 @@
 .social {
   @include list-reset;
-  margin: 0 auto 37px auto;
+  margin: 36px auto 37px auto;
   display: flex;
   flex-direction: row;
   width: 152px;
