--- a/source/sass/blocks/advice.scss
+++ b/source/sass/blocks/advice.scss
@@ -17,7 +17,7 @@
   }
 }
 
-.advice__image {
+.advice-wrapper {
   position: relative;
   width: 320px;
   min-height: 160px;
@@ -33,6 +33,31 @@
     margin: 0 auto;
     padding-top: 50px;
   }
+}
+
+.advice-wrapper--form {
+  position: relative;
+  width: 320px;
+  min-height: 160px;
+  margin-bottom: 35px;
+  background-image: url("../img/back-desktop.jpg");
+  background-repeat: no-repeat;
+  background-position: top;
+  z-index: 1;
+
+  img {
+    display: block;
+    width: 229px;
+    margin: 0 auto;
+    padding-top: 50px;
+  }
+}
+
+.advice__image {
+  position: relative;
+  width: 320px;
+  min-height: 160px;
+  margin-bottom: 35px;
 }
 
 @media (min-width: $tablet-width) {
@@ -52,6 +77,10 @@
   min-height: 389px;
   margin-bottom: 40px;
   background-size: cover;
+  background-image: url("../img/triangle-mobile.svg");
+  background-repeat: no-repeat;
+  background-position: bottom;
+  z-index: 1;
 
   img {
     width: 280px;
@@ -81,12 +110,18 @@
 }
 
 .advice__image--form {
-  min-height: 290px;
-  margin-bottom: 74px;
+  position: relative;
+  width: 320px;
+  min-height: 214px;
+  margin-bottom: 35px;
+  background-image: url("../img/triangle-mobile.svg");
+  background-repeat: no-repeat;
+  background-position: bottom;
+  z-index: 1;
 }
 
 @media (min-width: $desktop-width) {
-  .advice__image {
+  .advice__image--form {
     width: 100%;
     background-image: url("../img/back-desktop@1x.jpg");
   }
@@ -97,38 +132,10 @@
   }
 }
 
-.advice__triangle {
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  width: 100%;
-  height: 50px;
-  background-image: url("../img/triangle-mobile.svg");
-  background-position: bottom;
-  background-repeat: no-repeat;
-  background-size: 105% auto;
-}
-
-@media (min-width: $tablet-width) {
-  .advice__triangle {
-    background-image: url("../img/triangle-tablet.svg");
-    min-height: 60px;
-    background-size: 100%;
-  }
-}
-
-@media (min-width: $desktop-width) {
-  .advice__triangle {
-    background-image: url("../img/triangle-desktop.svg");
-    background-size: cover;
-    min-height: 57px;
-  }
-}
-
 .advice__slogan {
   color: #000000;
   font-size: 18px;
-  font-weight: bold;
+  font-weight: 700;
   line-height: 26px;
 }
 
@@ -144,30 +151,30 @@
   color: #333333;
   font-size: 14px;
   line-height: 26px;
-  font-weight: normal;
+  font-weight: 400;
 }
 
 .advice__intro--form,
-.advice__intro--photo {
+.advice__intro--catalog {
   width: 275px;
   margin: 0 auto;
   padding-top: 25px;
   line-height: 24px;
 }
 
-.advice__intro--photo {
+.advice__intro--catalog {
   padding-bottom: 21px;
 }
 
 @media (min-width: $tablet-width) {
-  .advice__intro--photo {
+  .advice__intro--catalog {
     width: 458px;
     padding-bottom: 65px;
   }
 }
 
 @media (min-width: $desktop-width) {
-  .advice__intro--photo {
+  .advice__intro--catalog {
     padding-bottom: 67px;
   }
 }
