--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -6,7 +6,7 @@
   font-size: 21px;
   line-height: 26px;
   color: $white;
-  font-weight: bold;
+  font-weight: 700;
   background-color: $main-blue;
   margin: 0 auto;
   padding-top: 15px;
