--- a/source/sass/blocks/catalogs.scss
+++ b/source/sass/blocks/catalogs.scss
@@ -2,6 +2,8 @@
   display: flex;
   flex-direction: column;
   border-top: 1px solid #e5e5e5;
+  list-style: none;
+  padding-left: 0;
 }
 
 @media (min-width: $tablet-width) {
