--- a/source/sass/blocks/features.scss
+++ b/source/sass/blocks/features.scss
@@ -10,26 +10,6 @@
   }
 }
 
-.features__welcome {
-  line-height: 26px;
-  text-align: center;
-  text-transform: uppercase;
-  padding-bottom: 6px;
-}
-
-.features__slogan {
-  color: #000000;
-  font-size: 18px;
-  font-weight: bold;
-  line-height: 26px;
-}
-
-@media (min-width: $tablet-width) {
-  .features__slogan {
-    font-size: 30px;
-  }
-}
-
 .features__list,
 .features__list-grey {
   @include list-reset;
@@ -64,7 +44,7 @@
   position: relative;
   padding: 19px 0 0 70px;
   margin: 0 0 22px 0;
-  width: 250px;
+  width: 290px;
   height: auto;
 
   &::before {
@@ -75,11 +55,31 @@
   }
 }
 
-.features__item--gift {
-  margin-top: -15px;
+.features__item--house::before {
+  top: 9px;
+  left: 21px;
+  width: 37px;
+  height: 36px;
+  background-image: url("../img/icon-house.svg");
 }
 
-.features__item--food {
+@media (min-width: $tablet-width) {
+  .features__item--house::before {
+    width: 75px;
+    height: 72px;
+    background-size: 75px 72px;
+    top: 44px;
+    left: 89px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .features__item--house::before {
+    left: 161px;
+  }
+}
+
+.features__item--gift {
   margin-top: -15px;
 
   &::before {
@@ -91,14 +91,96 @@
   }
 }
 
+@media (min-width: $tablet-width) {
+  .features__item--gift {
+    order: 3;
+
+    .features__description {
+      width: 170px;
+    }
+
+    &::before {
+      width: 64px;
+      height: 75px;
+      background-size: 64px 75px;
+      top: 40px;
+      left: 94px;
+    }
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .features__item--gift {
+    order: 3;
+
+    .features__description {
+      width: 300px;
+    }
+
+    &::before {
+      left: 167px;
+    }
+  }
+}
+
+.features__item--food {
+  margin-top: -15px;
+
+  &::before {
+    top: 16px;
+    left: 18px;
+    width: 38px;
+    height: 34px;
+    background-image: url("../img/icon-burger.svg");
+  }
+}
+
+@media (min-width: $tablet-width) {
+  .features__item--food::before {
+    width: 77px;
+    height: 68px;
+    background-size: 77px 68px;
+    top: 46px;
+    left: 88px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .features__item--food::before {
+    left: 161px;
+  }
+}
+
+@media (min-width: $tablet-width) {
+  .features__item {
+    padding: 0;
+    padding-top: 141px;
+    margin: 0;
+    text-align: center;
+    width: 256px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .features__item {
+    width: 400px;
+  }
+}
+
 .features__title {
   margin: 0;
   padding: 0;
   margin-bottom: 15px;
   font-size: 18px;
   line-height: 26px;
-  font-weight: bold;
+  font-weight: 700;
   color: #000000;
+}
+
+@media (min-width: $tablet-width) {
+  .features__title {
+    font-size: 21px;
+  }
 }
 
 .features__description {
@@ -106,8 +188,22 @@
   padding: 0;
   font-size: 14px;
   line-height: 21px;
-  font-weight: normal;
+  font-weight: 400;
   color: #333333;
+}
+
+@media (min-width: $tablet-width) {
+  .features__description {
+    width: 158px;
+    margin: 0 auto;
+    padding-top: 7px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .features__description {
+    width: 300px;
+  }
 }
 
 .features__list-grey {
@@ -115,9 +211,33 @@
   background-color: #eeeeee;
 }
 
+@media (min-width: $tablet-width) {
+  .features__list-grey {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    min-height: 256px;
+  }
+}
+
 .features__item-grey {
   position: relative;
   min-height: 168px;
+}
+
+@media (min-width: $tablet-width) {
+  .features__item-grey {
+    width: 256px;
+    min-height: 256px;
+    padding-top: 19px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .features__item-grey {
+    width: 400px;
+  }
 }
 
 .features__title-grey {
@@ -125,15 +245,23 @@
   padding: 26px 0 10px 0;
   font-size: 18px;
   line-height: 26px;
-  font-weight: bold;
+  font-weight: 700;
   color: #000000;
+}
+
+@media (min-width: $tablet-width) {
+  .features__title-grey {
+    font-size: 21px;
+    width: 140px;
+    margin: 0 auto;
+  }
 }
 
 .features__number-grey,
 .features__description-grey {
   font-size: 14px;
   line-height: 21px;
-  font-weight: normal;
+  font-weight: 400;
   color: #333333;
 }
 
@@ -144,22 +272,67 @@
 }
 
 @media (min-width: $tablet-width) {
-  .features {
-    display: flex;
-    flex-direction: column;
+  .features__description-grey {
+    padding-top: 22px;
+    width: 158px;
   }
 }
 
 @media (min-width: $desktop-width) {
-  .features__list {
-    padding-bottom: 81px;
+  .features__description-grey {
+    width: 300px;
   }
 }
 
-.features__item--house::before {
-  top: 9px;
-  left: 21px;
-  width: 37px;
-  height: 36px;
-  background-image: url("../img/icon-house.svg");
+.features__hr::after {
+  position: absolute;
+  content: "";
+  width: 280px;
+  height: 1px;
+  background-color: #d6d6d6;
+  top: 167px;
+  left: 20px;
+}
+
+@media (min-width: $tablet-width) {
+  .features__hr::after {
+    display: none;
+  }
+}
+
+.features__br {
+  display: none;
+}
+
+@media (min-width: $desktop-width) {
+  .features__br {
+    display: inline;
+  }
+}
+
+.features__slogan {
+  color: #000000;
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 26px;
+  margin: 0 18px 0 17px;
+  text-align: center;
+  padding-left: 12px;
+  padding-right: 12px;
+}
+
+@media (min-width: $tablet-width) {
+  .features__slogan {
+    font-size: 30px;
+  }
+}
+
+.features__intro {
+  margin: 0 18px 0 17px;
+  padding: 25px 0 0;
+  color: #333333;
+  font-size: 14px;
+  line-height: 26px;
+  font-weight: 400;
+  text-align: center;
 }
