--- a/source/sass/blocks/form-contact.scss
+++ b/source/sass/blocks/form-contact.scss
@@ -23,7 +23,7 @@
   display: block;
   font-size: 14px;
   line-height: 26px;
-  font-weight: normal;
+  font-weight: 400;
   color: #333333;
   text-transform: uppercase;
   margin-left: 22px;
@@ -51,7 +51,7 @@
   font-family: $page-font;
   font-size: 18px;
   line-height: 26px;
-  font-weight: bold;
+  font-weight: 700;
   color: #000000;
   padding-left: 20px;
   flex-grow: 1;
