--- a/source/sass/blocks/form-name.scss
+++ b/source/sass/blocks/form-name.scss
@@ -29,7 +29,7 @@
   margin-right: 15px;
   font-size: 14px;
   line-height: 26px;
-  font-weight: normal;
+  font-weight: 400;
   color: #333333;
   text-align: left;
   text-transform: uppercase;
@@ -44,7 +44,7 @@
   font-family: $page-font;
   font-size: 18px;
   line-height: 26px;
-  font-weight: bold;
+  font-weight: 700;
   color: #000000;
   padding-left: 20px;
   min-width: 150px;
