--- a/source/sass/blocks/form-radio.scss
+++ b/source/sass/blocks/form-radio.scss
@@ -18,7 +18,34 @@
   line-height: 26px;
   font-weight: bold;
   color: #000000;
-  padding-left: 79px;
+  padding-left: 60px;
+
+  &::before {
+    position: absolute;
+    content: "";
+    width: 55px;
+    height: 55px;
+    background-color: #f2f2f2;
+    top: -14px;
+    left: 1px;
+    border-radius: 50%;
+  }
+
+  &:hover::before {
+    background-color: #e5e5e5;
+  }
+
+  &:active::before {
+    background-color: #d5d5d5;
+  }
+}
+
+.form-radio__input {
+  display: none;
+}
+
+.form-radio__input:focus + .form-radio__label::before {
+  background-color: #e5e5e5;
 }
 
 @media (min-width: $tablet-width) {
