--- a/source/sass/blocks/offer.scss
+++ b/source/sass/blocks/offer.scss
@@ -14,7 +14,7 @@
   padding: 26px 0 0 0;
   font-size: 21px;
   line-height: 26px;
-  font-weight: bold;
+  font-weight: 700;
   color: #000000;
 }
 
@@ -32,7 +32,7 @@
   padding: 0;
   font-size: 14px;
   line-height: 24px;
-  font-weight: normal;
+  font-weight: 400;
   color: #333333;
 }
 
