--- a/source/sass/general/fonts.scss
+++ b/source/sass/general/fonts.scss
@@ -1,7 +1,7 @@
 @font-face {
   font-family: "PT Sans";
   font-style: normal;
-  font-weight: normal;
+  font-weight: 400;
   font-display: swap;
   src:
     url("../fonts/ptsans.woff2") format("woff2"),
@@ -11,7 +11,7 @@
 @font-face {
   font-family: "PT Sans";
   font-style: normal;
-  font-weight: bold;
+  font-weight: 700;
   font-display: swap;
   src:
     url("../fonts/ptsansbold.woff2") format("woff2"),
