--- a/source/sass/blocks/advice.scss
+++ b/source/sass/blocks/advice.scss
@@ -17,7 +17,7 @@
   }
 }
 
-.advice-wrapper {
+.advice__wrapper {
   position: relative;
   width: 320px;
   min-height: 160px;
@@ -35,7 +35,7 @@
   }
 }
 
-.advice-wrapper--form {
+.advice__wrapper--form {
   position: relative;
   width: 320px;
   min-height: 160px;
