--- a/source/sass/blocks/form-contact.scss
+++ b/source/sass/blocks/form-contact.scss
@@ -32,7 +32,7 @@
 
 @media (min-width: $desktop-width) {
   .form-contact__label {
-    margin-left: 0;
+    margin-left: 31px;
     margin-right: 17px;
   }
 }
