--- a/source/sass/blocks/map.scss
+++ b/source/sass/blocks/map.scss
@@ -3,7 +3,7 @@
   width: 100%;
   min-height: 350px;
   background-color: #f3f1ed;
-  background-image: url("/source/img/map-mobile.jpg");
+  background-image: url("../img/map-mobile.jpg");
   background-position: center;
   background-repeat: no-repeat;
   margin-bottom: 38px;
