--- a/source/sass/blocks/feedback-form.scss
+++ b/source/sass/blocks/feedback-form.scss
@@ -304,6 +304,7 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: baseline;
+  padding-left: 0;
 }
 
 @media (min-width: $desktop-width) {
