--- a/source/sass/blocks/form-contact.scss
+++ b/source/sass/blocks/form-contact.scss
@@ -103,8 +103,10 @@
 
 .form-contact__logo--phone {
   background-image: url("../img/icon-phone.svg");
+  padding-left: 7px;
 }
 
 .form-contact__logo--env {
   background-image: url("../img/icon-mail.svg");
+  padding-left: 7px;
 }
