--- a/source/sass/blocks/feature-photo.scss
+++ b/source/sass/blocks/feature-photo.scss
@@ -10,7 +10,7 @@
   padding-top: 37px;
 }
 
-.feature-photo-wrapper {
+.feature-photo__wrapper {
   position: relative;
   width: 100%;
   height: 211px;
