--- a/source/sass/blocks/video.scss
+++ b/source/sass/blocks/video.scss
@@ -130,7 +130,7 @@
   width: 280px;
   height: 45px;
   background-color: rgba(0, 0, 0, 0.6);
-  margin: 0 auto;
+  margin: 4px auto;
 }
 
 @media (min-width: $tablet-width) {
