--- a/source/sass/general/global.scss
+++ b/source/sass/general/global.scss
@@ -21,6 +21,16 @@ img {
   border-style: none;
 }
 
+html {
+  box-sizing: border-box;
+}
+
 li {
   list-style: none;
+}
+
+@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
+  img[src$=".svg"] {
+    width: 100%;
+  }
 }
